# crewai-email-generation

./: README.md
email_geneartion/: README.md  generated_email.txt  pyproject.toml
email_geneartion/docs/: req.txt
email_geneartion/src/email_geneartion/: crew.py  main.py
email_geneartion/src/email_geneartion/config/: agents.yaml  tasks.yaml
